# translator

./: .replit  Dockerfile  app.py  apt.txt  build.sh  pyproject.toml  render.yaml  replit.md  requirements.txt
static/css/: styles.css
static/js/: app.js
templates/: index.html
uploads/: .gitkeep
